removed constants support entirely
during implementation of object (record) support for constants, it turned out that
object constants cannot be supported in objc interfaces.
The current Djinni implementation seems to just hide this problem
by not generating the required code and not giving an error.

Given the fact that also the implementation overhead for supporting constants
is quite big compared to the little edge use-cases
that it might be useful in, I decided to dump the feature all together. This also
saves me from worrying questions, for example on how to implement list and dict
support for constants, or how to support enum, flags and records support for
external types.

All in all the feature tends to blur the lines between the IDL being just a
interface definition language to it starting to become a programming language.
IMO PyDjinni should not continue this approach and thereby the feature was removed.

--- a/src/pydjinni/generator/java/java/templates/interface.java.jinja2
+++ b/src/pydjinni/generator/java/java/templates/interface.java.jinja2
@@ -1,5 +1,5 @@
 {% extends "base.jinja2" %}
-{% from "macros.jinja2" import constant_def, data_type, return_type, parameters %}
+{% from "macros.jinja2" import data_type, return_type, parameters %}
 
 {% block header %}
 {% if type_def.cpp.proxy %}
@@ -17,9 +17,6 @@ import java.util.concurrent.atomic.AtomicBoolean;
         new {{ config.package|join('.') }}.native_lib.{{ config.native_lib }}Loader();
     }
     {% endif %}
-    {%- for constant in type_def.constants -%}
-    {{- constant_def(constant) }}
-    {% endfor %}
     {% for method in type_def.methods %}
     {% if method.comment %}
     {{ method.java.comment | indent(4) }}
