--- a/src/pydjinni/generator/cpp/cpp/templates/header/interface.hpp.jinja2
+++ b/src/pydjinni/generator/cpp/cpp/templates/header/interface.hpp.jinja2
@@ -3,6 +3,9 @@
 {% block header %}
 #pragma once
 #include <memory>
+{% if type_def.properties|length > 0 %}
+#include "pydjinni/property.hpp"
+{% endif %}
 {% endblock %}
 
 {% block content %}
@@ -21,5 +24,16 @@ public:
     {%- endfor -%}
     ){{ " const" if method.const }}{{ " = 0" if not method.static }};
 {% endfor %}
+{% if type_def.properties|length > 0 %}
+{% for property in type_def.properties %}
+    pydjinni::{{ "ReadOnly" if property.readonly }}Property<{{ property.cpp.type_spec }}>& {{ property.cpp.getter }}() {
+        return _{{ property.cpp.name }};
+    }
+{% endfor %}
+protected:
+{% for property in type_def.properties %}
+    pydjinni::Property<{{ property.cpp.type_spec }}> _{{ property.cpp.name }};
+{% endfor %}
+{% endif %}
 };
 {% endblock %}
