--- a/src/pydjinni/generator/objc/objc/templates/header/flags.h.jinja2
+++ b/src/pydjinni/generator/objc/objc/templates/header/flags.h.jinja2
@@ -6,7 +6,9 @@
 {% if type_def.comment %}
 {{ type_def.objc.comment }}
 {% endif %}
+{% if config.swift.rename_interfaces %}
 NS_SWIFT_NAME({{ type_def.objc.swift_typename }})
+{% endif %}
 typedef NS_OPTIONS(NSUInteger, {{ type_def.objc.typename }}) {
 {% for flag in type_def.flags %}
     {% if flag.comment %}
