--- a/src/pydjinni/generator/java/java/templates/interface.java.jinja2
+++ b/src/pydjinni/generator/java/java/templates/interface.java.jinja2
@@ -14,7 +14,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 #}
 {% extends "base.jinja2" %}
-{% from "macros.jinja2" import data_type, return_type, parameters %}
+{% from "macros.jinja2" import data_type, return_type, parameters, comment %}
 
 {% block header %}
 {% if type_def.cpp.proxy %}
@@ -24,7 +24,10 @@ import java.util.concurrent.atomic.AtomicBoolean;
 
 {% block content %}
 {% if type_def.comment %}
-{{ type_def.java.comment }}
+{{ comment(type_def) }}
+{% endif %}
+{% if type_def.deprecated %}
+@Deprecated
 {% endif %}
 {{ type_def.java.class_modifier }}abstract class {{ type_def.java.name }} {
     {% if type_def.main and config.native_lib %}
@@ -34,7 +37,10 @@ import java.util.concurrent.atomic.AtomicBoolean;
     {% endif %}
     {% for method in type_def.methods %}
     {% if method.comment %}
-    {{ method.java.comment | indent(4) }}
+    {{ comment(method, indentation=4) }}
+    {% endif %}
+    {% if method.deprecated %}
+    @Deprecated
     {% endif %}
     public {{ "static" if method.static else "abstract" }} {{ return_type(method.return_type_ref) }} {{ method.java.name }}({{ parameters(method) }})
     {%- if method.static -%}
