--- a/src/pydjinni/generator/objc/objc/templates/header/enum.h.jinja2
+++ b/src/pydjinni/generator/objc/objc/templates/header/enum.h.jinja2
@@ -14,18 +14,22 @@ See the License for the specific language governing permissions and
 limitations under the License.
 #}
 {% extends "base.jinja2" %}
+{% from "macros.jinja2" import comment, deprecated %}
 
 {% block content %}
 {% if type_def.comment %}
-{{ type_def.objc.comment }}
+{{ comment(type_def) }}
 {% endif %}
 {% if config.swift.rename_interfaces %}
 NS_SWIFT_NAME({{ type_def.objc.swift_typename }})
 {% endif %}
+{% if type_def.deprecated %}
+{{ deprecated(type_def) }}
+{% endif %}
 typedef NS_ENUM(NSUInteger, {{ type_def.objc.typename }}) {
 {% for item in type_def.items %}
     {% if item.comment %}
-    {{ item.objc.comment | indent(4) }}
+    {{ comment(item, indentation=4) }}
     {% endif %}
     {{ type_def.objc.typename ~ item.objc.name ~ ("," if not loop.last) }}
 {% endfor %}
