--- a/src/pydjinni/generator/cpp/cpp/templates/header/flags.hpp.jinja2
+++ b/src/pydjinni/generator/cpp/cpp/templates/header/flags.hpp.jinja2
@@ -14,6 +14,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 #}
 {% extends "base.jinja2" %}
+{% from "macros.jinja2" import comment, deprecated %}
 
 {% block header %}
 #pragma once
@@ -23,12 +24,15 @@ limitations under the License.
 
 {% block content %}
 {% if type_def.comment %}
-{{ type_def.cpp.comment }}
+{{ comment(type_def) }}
+{% endif %}
+{% if type_def.deprecated %}
+{{ deprecated(type_def) }}
 {% endif %}
 enum class {{ type_def.cpp.name }} : unsigned {
 {% for flag in type_def.flags %}
     {% if flag.comment %}
-    {{ flag.cpp.comment | indent(4) }}
+    {{ comment(flag, indentation=4) }}
     {% endif %}
     {{ flag.cpp.name ~ " = " -}}
     {% if flag.none %}
