--- a/src/pydjinni/generator/java/java/templates/enum.java.jinja2
+++ b/src/pydjinni/generator/java/java/templates/enum.java.jinja2
@@ -14,15 +14,16 @@ See the License for the specific language governing permissions and
 limitations under the License.
 #}
 {% extends "base.jinja2" %}
+{% from "macros.jinja2" import comment %}
 
 {% block content %}
 {% if type_def.comment %}
-{{ type_def.java.comment }}
+{{ comment(type_def) }}
 {% endif %}
 public enum {{ type_def.java.name }} {
 {% for item in type_def.items %}
     {% if item.comment %}
-    {{ item.java.comment | indent(4) }}
+    {{ comment(item, 4) }}
     {% endif %}
     {{ item.java.name ~ (";" if loop.last else ",") }}
 {% endfor %}
