--- a/src/pydjinni/generator/objc/objc/templates/header/flags.h.jinja2
+++ b/src/pydjinni/generator/objc/objc/templates/header/flags.h.jinja2
@@ -14,20 +14,24 @@ See the License for the specific language governing permissions and
 limitations under the License.
 #}
 {% extends "base.jinja2" %}
+{% from "macros.jinja2" import comment, deprecated %}
 
 {% set counter = namespace(value=0) %}
 
 {% block content %}
 {% if type_def.comment %}
-{{ type_def.objc.comment }}
+{{ comment(type_def) }}
 {% endif %}
 {% if config.swift.rename_interfaces %}
 NS_SWIFT_NAME({{ type_def.objc.swift_typename }})
 {% endif %}
+{% if type_def.deprecated %}
+{{ deprecated(type_def) }}
+{% endif %}
 typedef NS_OPTIONS(NSUInteger, {{ type_def.objc.typename }}) {
 {% for flag in type_def.flags %}
     {% if flag.comment %}
-    {{ flag.objc.comment | indent(4) }}
+    {{ comment(flag, indentation=4) }}
     {% endif %}
     {{ type_def.objc.typename ~ flag.objc.name ~ " = " -}}
     {% if flag.none %}
