--- a/src/pydjinni/generator/objc/objc/templates/header/interface.h.jinja2
+++ b/src/pydjinni/generator/objc/objc/templates/header/interface.h.jinja2
@@ -14,6 +14,7 @@ See the License for the specific language governing permissions and
         limitations under the License.
 #}
 {% extends "base.jinja2" %}
+{% from "macros.jinja2" import comment, deprecated %}
 
 {% block header %}
 {% for header in type_def.dependencies | headers('objc') -%}
@@ -23,10 +24,13 @@ See the License for the specific language governing permissions and
 
 {% block content %}
 {% if type_def.comment %}
-{{ type_def.objc.comment }}
+{{ comment(type_def) }}
 {% endif %}
 {% if config.swift.rename_interfaces %}
 NS_SWIFT_NAME({{ type_def.objc.swift_typename }})
+{% endif %}
+{% if type_def.deprecated %}
+{{ deprecated(type_def) }}
 {% endif %}
 {% if "objc" in type_def.targets %}
 @protocol {{ type_def.objc.typename }} {{ "<NSObject>" if config.strict_protocols }}
@@ -35,13 +39,16 @@ NS_SWIFT_NAME({{ type_def.objc.swift_typename }})
 {% endif %}
 {% for method in type_def.methods %}
 {% if method.comment %}
-{{ method.objc.comment }}
+{{ comment(method) }}
 {% endif %}
 {{ method.objc.specifier }} ({{ (method.objc.annotation ~ " ") if method.objc.annotation }}{{ method.objc.type_decl }}){{ method.objc.name }}
 {%- for parameter in method.parameters -%}
 {{ ":" if loop.first else (" " ~ parameter.objc.name ~ ":") }}({{ (parameter.objc.annotation ~ " ") if parameter.objc.annotation }}{{ parameter.objc.type_decl }}){{ parameter.objc.name }}
 {% endfor %}
 {% if config.swift.rename_interfaces %}
+  {% if method.deprecated %}
+  {{ deprecated(method) | indent(2) }}
+  {% endif %}
   __attribute__((swift_name("{{ method.objc.name }}(
 {%- for parameter in method.parameters -%}
 {{ parameter.objc.name }}:
