chore: add integration testing that validates expected output
on each run of an integration test, a precondition is testing
if the files contain the expected results, if an expectation is provided.
If the expectation doesn't match, the precondition fails and the tests are aborted.

--- a/src/pydjinni/generator/java/jni/templates/base.jinja2
+++ b/src/pydjinni/generator/java/jni/templates/base.jinja2
@@ -21,8 +21,15 @@ limitations under the License.
 {%- if type_def.jni.namespace -%}
 namespace {{ type_def.jni.namespace }} {
 {% endif %}
+{% if type_def.deprecated %}
+#pragma clang diagnostic push
+#pragma clang diagnostic ignored "-Wdeprecated-declarations"
+{% endif %}
 {% block content %}
 {% endblock %}
+{% if type_def.deprecated %}
+#pragma clang diagnostic pop
+{% endif %}
 {% if type_def.jni.namespace -%}
 }  // namespace {{ type_def.jni.namespace }}
 {% endif %}
