--- a/src/pydjinni/generator/objc/objc/templates/header/flags.h.jinja2
+++ b/src/pydjinni/generator/objc/objc/templates/header/flags.h.jinja2
@@ -19,14 +19,8 @@ limitations under the License.
 {% set counter = namespace(value=0) %}
 
 {% block content %}
-{% if type_def.comment %}
+{% if type_def.objc.comment %}
 {{ comment(type_def) }}
-{% endif %}
-{% if config.swift.rename_interfaces %}
-NS_SWIFT_NAME({{ type_def.objc.swift_typename }})
-{% endif %}
-{% if type_def.deprecated %}
-{{ deprecated(type_def) }}
 {% endif %}
 typedef NS_OPTIONS(NSUInteger, {{ type_def.objc.typename }}) {
 {% for flag in type_def.flags %}
@@ -47,5 +41,11 @@ typedef NS_OPTIONS(NSUInteger, {{ type_def.objc.typename }}) {
     {% endif %}
     {{- ("," if not loop.last) }}
 {% endfor %}
-};
+}
+{%- if config.swift.rename_interfaces %}
+ NS_SWIFT_NAME({{ type_def.objc.swift_typename }})
+{%- endif -%}
+{%- if type_def.deprecated %}
+ {{ deprecated(type_def) }}
+{%- endif -%};
 {% endblock %}
