--- a/src/pydjinni/generator/cpp/cpp/templates/base.jinja2
+++ b/src/pydjinni/generator/cpp/cpp/templates/base.jinja2
@@ -32,3 +32,5 @@ namespace {{ type_def.cpp.namespace }} {
 {% if type_def.cpp.namespace -%}
 }  // namespace {{ type_def.cpp.namespace }}
 {% endif %}
+{% block no_namespace %}
+{% endblock %}
